src/test/deca/syntax/invalid/missing-semi.deca
// Description:
//    Test avec un point-virgule manquant.
//
// Resultats:
//    Erreur de syntaxe.
//
{
    int x
    x = 42;
    println(x);
}
